# agents_ui

./: .gitignore  README.md
agents_backend/: .gitignore  Dockerfile  pyproject.toml
agents_backend/app/: config.py  core.py  db.py  login.py  main.py
agents_backend/app/agents/: __init__.py  databot.py  search_bot.py
agents_web/: .gitignore  Dockerfile  package-lock.json  package.json
agents_web/app/: globals.css  layout.tsx  page.tsx
agents_web/app/components/: PartRenderer.tsx  SessionPanel.tsx
agents_web/app/config/: api.ts
agents_web/app/login/: page.tsx
